# agent-orchestrator

./: .coverage  .env.example  .gitignore  IDEA_DUMP.md  LICENSE  MCP_SETUP.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  Roadmap.md  alembic.ini  config.yaml  docker-compose.yml  justfile  package-lock.json  pyproject.toml  tasks.example.json  tasks.md
.claude-code/: settings.example.json  settings.json
backend/: ai_manager.py  app.py  backend_example.py  config.py  database.py  main.py  main_old.py  mcp_server.py  repo_analyzer.py  tagging.py
backend/alembic/: env.py
backend/alembic/versions/: 5b3a4c0d9b7d_add_external_task_fields.py  edf7666e0198_initial_schema_with_tasks_environments_.py
backend/api/: ai.py  environments.py  tasks.py
backend/integrations/: youtrack.py
backend/mcp/: __init__.py  router.py  tools.py
backend/models/: __init__.py  ai_session.py  environment.py  task.py  task_event.py  task_path.py
backend/prompts/: tag_classify.md  task_split.md
backend/services/: ai_service.py  markdown_service.py
backend/static/: app.js  styles.css
backend/sync/: __init__.py  markdown_parser.py  markdown_writer.py  merge.py  sync_service.py  vault_watcher.py  youtrack_sync.py
backend/templates/: kanban.html  layout.html  stats.html  task_card.html
backend/workers/: ai_worker.py
cli/: kanban.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: .env.example  .gitignore  dashboard.jsx  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx
frontend/src/components/: Column.tsx  TaskCard.tsx
frontend/src/pages/: Activity.tsx  Board.tsx  Environments.tsx  Stats.tsx
frontend/src/services/: api.ts
tests/: conftest.py  test_ai_manager.py  test_environment_api.py  test_markdown_parser.py  test_markdown_writer.py  test_mcp_server.py  test_merge.py  test_repo_analyzer.py  test_task_suggestions.py  test_tasks_api.py  test_vault_watcher.py
