[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "AI-assisted task operating system with Obsidian sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.13.0",
    "anthropic>=0.34.0",
    "fastapi>=0.135.1",
    "gitpython>=3.1.0",
    "httpx>=0.28.0",
    "jinja2>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "rich>=13.7.0",
    "rq>=1.16.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "uvicorn>=0.41.0",
    "watchdog>=4.0.0",
]

[project.scripts]
kanban = "cli.kanban:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "cli"]

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
