[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "MCP-based task orchestration system for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.13.0",
    "anthropic>=0.34.0",
    "fastapi>=0.135.1",
    "gitpython>=3.1.0",
    "httpx>=0.28.0",
    "jinja2>=3.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "rich>=13.7.0",
    "rq>=1.16.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[project.scripts]
orchestrator = "backend.main:main"
mcp-server = "backend.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
